Fixed footer overlap
I fixed a footer overlap issue with the form on the edit profile page. I added an option on the frontend to edit email and username, backend still needs to be added. I removed a double footer on some pages. I added the tutorial link for the CRUD operations course to the main readme file.

--- a/Matcha-SPA/src/app/members/member-edit/member-edit.component.css
+++ b/Matcha-SPA/src/app/members/member-edit/member-edit.component.css
@@ -13,26 +13,3 @@
     background-color: #fff;
     border-top: none;
 }
-
-html {
-    position: relative;
-    min-height: 100%;
-}
-
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
-  text-align: center;
-}
-
-.footer {
-  position: relative;
-  bottom: 0;
-  margin-bottom: 1em;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px;
-  background: lightgrey;
-  text-align: center;
-}
