--- a/Matcha-SPA/src/app/nav/nav.component.css
+++ b/Matcha-SPA/src/app/nav/nav.component.css
@@ -20,7 +20,7 @@ body {
 }
 
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   margin-bottom: 1em;
   width: 100%;
